Prevent overlap between map and navbar.

--- a/src/main/webapp/index-style.css
+++ b/src/main/webapp/index-style.css
@@ -6,6 +6,7 @@
   height: 100%;
   position: absolute;
   width: 100%;
+  top: 10%;
   z-index: -1;
 }
 
